CollegeApp/force-app/main/default/objects/Candidate__c/fields/Are_graduated__c.field-meta.xml
<CustomField>
    <fullName>Are_graduated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are graduated?</label>
    <type>Checkbox</type>
</CustomField>