CollegeApp/force-app/main/default/objects/Candidate__c/fields/DocumentRequired__c.field-meta.xml
<CustomField>
    <fullName>DocumentRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DocumentRequired</label>
    <type>Checkbox</type>
</CustomField>