CollegeApp/force-app/main/default/objects/Candidate__c/fields/Graduated__c.field-meta.xml
<CustomField>
    <fullName>Graduated__c</fullName>
    <defaultValue>&apos;Graduated&apos;</defaultValue>
    <label>Graduated?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graduated</fullName>
                <default>true</default>
                <label>Graduated</label>
            </value>
            <value>
                <fullName>Not Graduated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>