CollegeApp/force-app/main/default/objects/Candidate__c/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <formula>First_Name__c+LastName__c+Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueId</label>
    <type>Text</type>
</CustomField>