CollegeApp/force-app/main/default/objects/Candidate__c/validationRules/AgeMustGreaterThan16.validationRule-meta.xml
<ValidationRule>
    <fullName>AgeMustGreaterThan16</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR( TODAY() )-YEAR(Date_of_Birth__c  ) &lt; 16</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Your age must be greater than 16</errorMessage>
</ValidationRule>