CollegeApp/force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>LastName__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Stage__c</columns>
    <columns>DocumentRequired__c</columns>
    <columns>Graduated__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>